--- a/unidad-1/basico.html
+++ b/unidad-1/basico.html
@@ -71,8 +71,8 @@
             <input type="password" id="contraseña">
         </div><br>
         <label for="sexo">Sexo: </label>
-         <input type="radio"> hombre
-         <input type="radio"> mujer
+         <input type="radio" id="hombre" name="sexo" value="hombre"> Hombre
+         <input type="radio" id="mujer" name="sexo" value="mujer"> Mujer
          <br><br>
          <div>
          <label for="comentarios">Comentarios: </label><br>
@@ -80,6 +80,9 @@
          </div>
          <br>
          <input type="submit" value="Enviar">
+         <br><br>
+         <label for="color">Color: </label>
+         <input type="color" id="color">
     </form>
     <hr>
 </body>
