--- a/unidad-3/ciclos/ejemploFor/ejemploflor.html
+++ b/unidad-3/ciclos/ejemploFor/ejemploflor.html
@@ -18,9 +18,14 @@
             <button type="button" id="btnDos">Ejemplo 2</button>
             <button type="button" id="btnTres">Ejemplo-While</button>
             <button type="button" id="btnCuatro">Ejemplo Select</button>
+            <button type="button" id="btnCinco">Ejemplo-lienzo</button>
+            <button type="button" id="circulos30">Ejemplo-DoWhile</button>
         </div>
         <div>
             <select id="opciones"></select>
+        </div>
+        <div>
+            <canvas id="lienzo" width="500px" height="500px"></canvas>
         </div>
     </form>
     <table id="resultado"></table>
